    e.g. for calling keying callbacks registered by programs using
    libcw (such as cwdaemon). Such callbacks will be now called at
    proper time intervals that match duration of enqueued
    dots/dashes/spaces.

    Initial report of incorrect behaviour, initial debugging, and
    confirmation of a fix come from Matthew M5EVT. Thanks Matthew!

  - modifying PulseAudio parameters to decrease XRUNS and improve
    behaviour of callback registered by client code in library.

    Integrating these two commits from Matthew M5EVT
    https://github.com/m5evt/unixcw-3.5.1/commit/2d5491a461587ac4686e2d1b897619c98be05c9e
    https://github.com/m5evt/unixcw-3.5.1/commit/c86785b595a6d711aae915150df2ccb848ace05c

    The result is a better behaviour of PulseAudio sound sink, a bit
    similar to ALSA improvements mentioned above. Thanks again,
    Matthew!

  - Behaviour of cw_lookup_phonetic() library function has been modified: the
    function now accepts NULL as a second argument (output buffer).

  - Several items in libcw_debug.h are marked as deprecated. These items
    should be used only internally, during development of libcw, and should
    not be used by client code. They will be removed from the header in the
    future.

  - Declaration of cw_debug_print_flags() has been removed from libcw_debug.h
    header. The function was not defined in the library, so no one could have
    used the function.

  - Function cw_generator_set_tone_slope() from libcw.h is now marked as
    deprecated. The function was/is unusable because there is no way that
    client code can pass a cw_gen_t variable as first argument.

  - Replacing some usages of double type with float type. There is very
    little (or maybe even nothing) in the library that would require
    precision or range of double.

  - Adding new function: cw_generator_remove_last_character().  The function
    removes last character enqueued to generator, it can be called multiple