@@ -27,6 +27,9 @@ version 3.6.0 / 2020-XX-YY
     Initial report of incorrect behaviour, initial debugging, and
     confirmation of a fix come from Matthew M5EVT. Thanks Matthew!
 
+  - ALSA period size (in samples) used by applications (cw, cwcp, xcwcp) can
+    be specifed in command line through --alsa-period-size command line arg.
+
   - modifying PulseAudio parameters to decrease XRUNS and improve
     behaviour of callback registered by client code in library.
 
